--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -22,17 +22,10 @@
         </nav>
     <body>
         <div class="container">
-            <h1>Personal Blog</h1>
-            <ul class="list-group list-group-flush">
-                {% for post in article %}
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
-                        <div>
-                            <a href="{{ url_for('article_detail', get_slug=post.slug) }}"><h3>{{ post.title }}</h3></a>
-                        </div>
-                        <span class="badge bg-primary rounded-pill">{{ post.date }}</span>
-                    </li>
-                {% endfor %}
-            </ul>
+            <h2> {{ post.title }}</h2>
+            <i> {{ post.date }} </i>
+            <hr>
+            <p> {{ post.content_html | safe }} </p>
         </div>
     </body>
 </html>
