--- a/templates/admin.html
+++ b/templates/admin.html
@@ -3,13 +3,15 @@
 
 <div class="container">
     <h1>Personal Blog</h1>
+    <div class="d-flex justify-content-end py-2 px-3">    
+        <button type="button" class="btn btn-warning"><a href="{{ url_for('add_article') }}">Add</button></a>
+    </div>
     <ul class="list-group list-group-flush">
         {% for post in article %}
             <li class="list-group-item d-flex justify-content-between align-items-center">
                 <div>
                     <a href="{{ url_for('article_detail', get_slug=post.slug) }}"><h3>{{ post.title }}</h3></a>
                 </div>
-                <span class="badge bg-primary rounded-pill">{{ post.date }}</span>
             </li>
         {% endfor %}
     </ul>
