--- a/templates/admin.html
+++ b/templates/admin.html
@@ -2,15 +2,17 @@
 {% block content %}
 
 <div class="container">
-    <h1>Personal Blog</h1>
-    <div class="d-flex justify-content-end py-2 px-3">    
-        <button type="button" class="btn btn-warning"><a href="{{ url_for('add_article') }}">Add</button></a>
+    <div class="d-flex justify-content-between align-items-center py-3">
+        <h1 class="mb-0">Personal Blog</h1>
+        <a href="{{ url_for('add_article') }}" class="btn btn-warning">Add</a>
     </div>
     <ul class="list-group list-group-flush">
         {% for post in article %}
             <li class="list-group-item d-flex justify-content-between align-items-center">
                 <div>
                     <a href="{{ url_for('article_detail', get_slug=post.slug) }}"><h3>{{ post.title }}</h3></a>
+                    <button type="button" class="btn btn-warning"><a href="{{ url_for('add_article') }}">Edit</button></a>   
+                    <button type="button" class="btn btn-warning"><a href="{{ url_for('add_article') }}">Delete</button></a>
                 </div>
             </li>
         {% endfor %}
