--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,9 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Admin</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -25,6 +28,7 @@
 
         {% block content %}
         {% endblock content %}
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
     </body>
 </html>
