--- a/templates/admin.html
+++ b/templates/admin.html
@@ -11,7 +11,7 @@
             <li class="list-group-item d-flex justify-content-between align-items-center">
                 <div>
                     <a href="{{ url_for('article_detail', get_slug=post.slug) }}"><h3>{{ post.title }}</h3></a>
-                    <button type="button" class="btn btn-warning"><a href="{{ url_for('add_article') }}">Edit</button></a>   
+                    <button type="button" class="btn btn-warning"><a href="{{ url_for('edit_article', get_slug=post.slug) }}">Edit</button></a>   
                     <button type="button" class="btn btn-warning"><a href="{{ url_for('add_article') }}">Delete</button></a>
                 </div>
             </li>
