--- a/templates/admin.html
+++ b/templates/admin.html
@@ -12,7 +12,9 @@
                 <div>
                     <a href="{{ url_for('article_detail', get_slug=post.slug) }}"><h3>{{ post.title }}</h3></a>
                     <button type="button" class="btn btn-warning"><a href="{{ url_for('edit_article', get_slug=post.slug) }}">Edit</button></a>   
-                    <button type="button" class="btn btn-warning"><a href="{{ url_for('add_article') }}">Delete</button></a>
+                    <form action="{{ url_for('delete_article', get_slug=post.slug) }}" method="POST" style="display:inline;">
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                    </form>
                 </div>
             </li>
         {% endfor %}
