--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -12,12 +12,14 @@
         <div class="form-group">
             <label for="email">Email Address</label>
             <input type="text" id="email" name="email" class="form-control" placeholder="Enter email...">
+
             <label for="username">Username</label>
             <input type="text" id="username" name="username" class="form-control" placeholder="Enter username...">
+
             <label for="password1">Password</label>
             <input type="text" id="password1" name="password1" class="form-control" placeholder="Enter password...">
-            <label for="password2">Password Again
-            </label>
+
+            <label for="password2">Password Again</label>
             <input type="text" id="password2" name="password2" class="form-control" placeholder="Enter password again...">
             <br>
             <div align="center">
