--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -18,8 +18,12 @@
                 <div class="collapse navbar-collapse" id="navbar">
                     <div class="navbar-nav">
                         <a class="nav-item nav-link" href="/home">Home</a>
-                        <a class="nav-item nav-link" href="/login">Login</a>
-                        <a class="nav-item nav-link" href="/sign-up">Sign up</a>
+                        {% if user.is_authenticated %}
+                            <a class="nav-item nav-link" href="/logout">Logout</a>
+                        {% else %}
+                            <a class="nav-item nav-link" href="/sign-up">Sign up</a>
+                            <a class="nav-item nav-link" href="/login">Login</a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
