--- a/website/templates/create_post.html
+++ b/website/templates/create_post.html
@@ -1,10 +1,17 @@
 {% extends 'base.html' %}
-
-{% block title %}
-    Home
-{% endblock %}
-
-
-{% block content %}
-    <h1>Hey there from the home page</h1>
-{% endblock %}
+    {% block title %}
+        Create Post
+    {% endblock %}
+    {% block content %}
+        <h1 align="center">Add post to the blog</h1>
+        <form method="post">
+            <div class="form-group">
+                <label for="text"></label>
+                <textarea name="text" id="text" rows="11" placeholder="Enter you article content" class="form-control"></textarea>
+                <br>
+                <div align="center">
+                    <button class="btn btn-lg btn-primary" type="submit">Add post</button>
+                </div>
+            </div>
+        </form>
+    {% endblock %}
