--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,10 +1,24 @@
 {% extends 'base.html' %}
-
-{% block title %}
-    Home
-{% endblock %}
-
-
-{% block content %}
-    <h1>Hey there from the home page</h1>
-{% endblock %}
+    {% block title %}
+        Home
+    {% endblock %}
+    {% block content %}
+        <h1 align="center">Posts</h1>
+        <div id="posts">
+            {% for post in posts %}
+                <div class="border-dark">
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                        <a href="/pist/{{post.user.username}}">{{post.user.username}}</a>
+                    </div>
+                    <div class="card-body">
+                        <div class="card-text">
+                            {{post.text}}
+                        </div>
+                        <div class="card-footer text-muted">
+                            {{post.date_created}}   
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    {% endblock %}
