--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -6,10 +6,17 @@
         <h1 align="center">Posts</h1>
         <div id="posts">
             {% for post in posts %}
-                <div class="border-dark">
+                <div class="card mb-3">
                     <div class="card-header d-flex justify-content-between align-items-center">
-                        <a href="/pist/{{post.user.username}}">{{post.user.username}}</a>
+                    <a href="/pist/{{post.user.username}}">{{post.user.username}}</a>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-sm btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-right">
+                            <li><a href="#" class="dropdown-item">Delete</a></li>
+                        </ul>
                     </div>
+                </div>
                     <div class="card-body">
                         <div class="card-text">
                             {{post.text}}
