--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -8,14 +8,16 @@
             {% for post in posts %}
                 <div class="card mb-3">
                     <div class="card-header d-flex justify-content-between align-items-center">
-                    <a href="/pist/{{post.user.username}}">{{post.user.username}}</a>
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-sm btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        </button>
-                        <ul class="dropdown-menu dropdown-menu-right">
-                            <li><a href="#" class="dropdown-item">Delete</a></li>
-                        </ul>
-                    </div>
+                    <a href="/post/{{post.user.username}}">{{post.user.username}}</a>
+                    {% if user.id == post.author %}
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-sm btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            </button>
+                            <ul class="dropdown-menu dropdown-menu-right">
+                                <li><a href="/delete-post//{{post.id}}" class="dropdown-item">Delete</a></li>
+                            </ul>
+                        </div>
+                    {% endif %}
                 </div>
                     <div class="card-body">
                         <div class="card-text">
@@ -27,5 +29,6 @@
                     </div>
                 </div>
             {% endfor %}
+            <br>
         </div>
     {% endblock %}
