add buttons for create and back

--- a/website/templates/create_post.html
+++ b/website/templates/create_post.html
@@ -10,8 +10,12 @@
                 <textarea name="text" id="text" rows="11" placeholder="Enter you article content" class="form-control"></textarea>
                 <br>
                 <div align="center">
-                    <button class="btn btn-lg btn-primary" type="submit">Add post</button>
+                    <button class="btn btn-lg btn-primary" type="submit">Post</button>
                 </div>
             </div>
         </form>
+        <br>
+        <div align="center">
+            <a href="/home"><button class="btn btn-lg btn-secondary" type="submit">Back</button></a>
+        </div>
     {% endblock %}
