--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -28,7 +28,12 @@
                         </div>
                     </div>
                 </div>
+                <br>
             {% endfor %}
-            <br>
+            <div align="center">
+                <a href="/create-post">
+                <button type="button" class="btn btn-lg btn-primary">Create Post</button>
+                </a>
+            </div>
         </div>
     {% endblock %}
