--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,39 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'posts_div.html' %}
     {% block title %}
-        Home
-    {% endblock %}
-    {% block content %}
-        <h1 align="center">Posts</h1>
-        <div id="posts">
-            {% for post in posts %}
-                <div class="card mb-3">
-                    <div class="card-header d-flex justify-content-between align-items-center">
-                    <a href="/post/{{post.user.username}}">{{post.user.username}}</a>
-                    {% if user.id == post.author %}
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            </button>
-                            <ul class="dropdown-menu dropdown-menu-right">
-                                <li><a href="/delete-post//{{post.id}}" class="dropdown-item">Delete</a></li>
-                            </ul>
-                        </div>
-                    {% endif %}
-                </div>
-                    <div class="card-body">
-                        <div class="card-text">
-                            {{post.text}}
-                        </div>
-                        <div class="card-footer text-muted">
-                            {{post.date_created}}   
-                        </div>
-                    </div>
-                </div>
-                <br>
-            {% endfor %}
-            <div align="center">
-                <a href="/create-post">
-                <button type="button" class="btn btn-lg btn-primary">Create Post</button>
-                </a>
-            </div>
-        </div>
-    {% endblock %}
+        Blog Posts
+    {% endblock %}  
