--- a/website/templates/posts_div.html
+++ b/website/templates/posts_div.html
@@ -1,10 +1,41 @@
 {% extends 'base.html' %}
-
-{% block title %}
-    Home
-{% endblock %}
-
-
-{% block content %}
-    <h1>Hey there from the home page</h1>
+    {% block title %}
+        {{ username }}'s Posts'
+    {% endblock %}
+    {% block content %}
+        <h1 align="center">{% block header %}Posts{% endblock %}</h1>
+        <div id="posts">
+            {% for post in posts %}
+                <div class="card mb-3">
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                    <a href="/posts/{{post.user.username}}">{{post.user.username}}</a>
+                    {% if user.id == post.author %}
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-sm btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            </button>
+                            <ul class="dropdown-menu dropdown-menu-right">
+                                <li><a href="/delete-post//{{post.id}}" class="dropdown-item">Delete</a></li>
+                            </ul>
+                        </div>
+                    {% endif %}
+                </div>
+                    <div class="card-body">
+                        <div class="card-text">
+                            {{post.text}}
+                        </div>
+                        <div class="card-footer text-muted">
+                            {{post.date_created}}   
+                        </div>
+                    </div>
+                </div>
+                <br>
+            {% endfor %}
+        </div>
+        {% block footer %}
+        <div align="center">
+            <a href="/create-post">
+            <button type="button" class="btn btn-lg btn-primary">Create Post</button>
+            </a>
+        </div>
+    {% endblock %}
 {% endblock %}
